# grpc-call-envoy

./: Cargo.toml  README.md  build.rs  config-grpc-call.yaml
protos/: uipbdiauthz.proto
src/: helloworld.rs  lib.rs  uipbdiauthz.rs
