[package]
name = "grpc-call-envoy"
version = "0.1.0"
edition = "2021"
authors = ["Raj Ramalingam"]
[lib]
crate-type = ["cdylib"]

[dependencies]
proxy-wasm = "0.2.2"
log = "0.4.22"
protobuf = "2.28.0"
base64 = "0.21.0"

[build-dependencies]
protoc-rust = "2.0"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = "debuginfo"
